# PyOptInterface

./: .buildinfo  .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  GEMINI.md  LICENSE.md  README.md  benchmark.html  callback.html  changelog.html  common_model_interface.html  constraint.html  container.html  copt.html  develop.html  expression.html  faq.html  genindex.html  getting_started.html  gurobi.html  highs.html  index.html  infeasibility.html  ipopt.html  knitro.html  model.html  mosek.html  nonlinear.html  numpy.html  objective.html  objects.inv  optimizer_version.toml  py-modindex.html  pyproject.toml  requirements-doc.txt  roadmap.html  search.html  searchindex.js  (+3 more)
.github/actions/setup_optimizers_linux/: action.yml
.github/actions/setup_optimizers_macos/: action.yml
.github/actions/setup_optimizers_windows/: action.yml
.github/workflows/: build.yml  doc-build.yml  linux-build.yml  macos-build.yml  wheel.yml  windows-build.yml
_sources/: benchmark.md.txt  callback.md.txt  changelog.md.txt  common_model_interface.md.txt  constraint.md.txt  container.md.txt  copt.md.txt  develop.md.txt  expression.md.txt  faq.md.txt  getting_started.md.txt  gurobi.md.txt  highs.md.txt  index.md.txt  ipopt.md.txt  knitro.md.txt  model.md.txt  mosek.md.txt  nonlinear.md.txt  numpy.md.txt  structure.md.txt  variable.md.txt
_sources/api/: pyoptinterface.gurobi.rst.txt  pyoptinterface.knitro.rst.txt  pyoptinterface.mosek.rst.txt  pyoptinterface.rst.txt
_sources/attribute/: copt.md.txt  highs.md.txt  ipopt.md.txt  knitro.md.txt  mosek.md.txt
_sources/examples/: optimal_control_rocket.md.txt  optimal_power_flow.md.txt
api/: pyoptinterface.copt.html  pyoptinterface.gurobi.html  pyoptinterface.highs.html  pyoptinterface.html  pyoptinterface.knitro.html  pyoptinterface.mosek.html  pyoptinterface.xpress.html
attribute/: copt.html  gurobi.html  highs.html  ipopt.html  knitro.html  mosek.html  xpress.html
bench/: bench.py  bench_linopy_cvxpy.py  bench_modify.jl  bench_modify.mod  bench_modify.py  bench_modify.run  bench_static.jl  bench_static.py  bench_vs_pyomo.py  test_delete.py
bench/jump_bench/: .gitignore  README.md  create_sysimage.jl  facility.cpp  facility.jl  facility.mod  facility.py  facility.run  facility_coptpy.py  facility_gurobipy.py  facility_poi.py  gurobi_cpp_build.bat  gurobi_cpp_build.sh  gurobi_cpp_run.jl  lqcp.cpp  lqcp.jl  lqcp.mod  lqcp.py  lqcp.run  lqcp_coptpy.py  lqcp_gurobipy.py  lqcp_poi.py  produce_table.jl
bench/jump_bench/archive/: facility_poi.py  lqcp_poi.py
bench/nqueens/: nqueens.jl  nqueens_gurobipy.py  nqueens_poi.py  nqueens_pythonmip.py
cmake/: FindCOPT.cmake  FindGUROBI.cmake  FindGurobi.cmake  FindHiGHS.cmake  FindMOSEK.cmake
docs/: requirements.txt
docs/source/: benchmark.md  callback.md  changelog.md  common_model_interface.md  conf.py  constraint.md  container.md  copt.md  expression.md  faq.md  getting_started.md  gurobi.md  highs.md  index.md  infeasibility.md  ipopt.md  knitro.md  model.md  mosek.md  nonlinear.md  numpy.md  objective.md  roadmap.md  variable.md  xpress.md
docs/source/api/: pyoptinterface.copt.rst  pyoptinterface.highs.rst  pyoptinterface.rst  pyoptinterface.xpress.rst
docs/source/attribute/: copt.md  gurobi.md  highs.md  knitro.md  mosek.md
docs/source/examples/: economic_dispatch.md  optimal_control_rocket.md  optimal_power_flow.md
examples/: economic_dispatch.html  optimal_control_rocket.html  optimal_power_flow.html
include/pyoptinterface/: abstract_model.hpp  cache_model.hpp  container.hpp  copt_model.hpp  core.hpp  cppad_interface.hpp  dylib.hpp  gurobi_model.hpp  highs_model.hpp  ipopt_model.hpp  knitro_model.hpp  mindopt_model.hpp  mosek_model.hpp  nlcore.hpp  nleval.hpp  nlexpr.hpp  oneshot_model.hpp  solver_common.hpp  tcc_interface.hpp  xpress_model.hpp
lib/: cache_model.cpp  copt_model.cpp  copt_model_ext.cpp  copt_model_ext_constants.cpp  core.cpp  core_ext.cpp  cppad_interface.cpp  cppad_interface_ext.cpp  gurobi_model.cpp  gurobi_model_ext.cpp  gurobi_model_ext_constants.cpp  highs_model.cpp  highs_model_ext.cpp  highs_model_ext_constants.cpp  ipopt_model.cpp  ipopt_model_ext.cpp  knitro_model.cpp  knitro_model_ext.cpp  knitro_model_ext_constants.cpp  main.cpp  mindopt_model.cpp  mindopt_model_ext.cpp  mosek_model.cpp  mosek_model_ext.cpp  mosek_model_ext_constants.cpp  nlcore.cpp  nlcore_ext.cpp  nleval.cpp  nleval_ext.cpp  nlexpr.cpp  nlexpr_ext.cpp  oneshot_model.cpp  tcc_interface.cpp  tcc_interface_ext.cpp  xpress_model.cpp  xpress_model_ext.cpp  xpress_model_ext_constants.cpp
scripts/: generate_attribute_table.py  generate_solver_constants.py
skills/pyoptinterface-expert/: SKILL.md
skills/pyoptinterface-expert/references/: api.md  examples.md
src/: abstract_model.cpp  copt_model.cpp  copt_model_ext.cpp  copt_model_ext_constants.cpp  core.cpp  core_ext.cpp  gurobi_model.cpp  gurobi_model_ext.cpp  gurobi_model_ext_constants.cpp  gurobi_wrapper.cpp  main.cpp  pyoptinterface_nb_ext.cpp  solver_common.cpp
src/pyoptinterface/: __init__.py  aml.py  copt.py  gurobi.py  highs.py  ipopt.py  knitro.py  mosek.py  nl.py  nlfunc.py  xpress.py
src/pyoptinterface/_src/: aml.py  attributes.py  codegen_c.py  (+24 more)
src/pyoptinterface_nb/: __init__.py  aml.py  attributes.py  copt.py  gurobi.py
tests/: callback_tsp.py  conftest.py  gurobi_rawmodel.py  highs_writefile.py  nlp.py  simple_cb.py  test_basic.py  test_close.py  test_compare_constraint.py  test_exp_cone.py  test_gurobi_lazyupdate.py  test_iis.py  test_in_constraint.py  test_ipopt.py  test_knitro.py  test_lukvle10.py  test_matrix_api.py  test_nlp.py  test_nlp_bilinear.py  test_nlp_clnlbeam.py  test_nlp_expression.py  test_nlp_hs071.py  test_nlp_multiple_run.py  test_nlp_opf.py  test_nlp_rocket.py  test_operator.py  test_preopt.py  test_qp.py  test_reducedcost.py  test_simple_opt.py  test_soc.py  test_sos.py  test_tupledict.py  test_update.py  tsp_cb.py  tsp_xpress.py
tests/cpp/: basic.cpp
tests/py/: bench.py  bench_vs_pyomo.py  gurobi_rawmodel.py  test_basic.py  test_copt.py  test_gurobi.py
