[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "pyoptinterface"
version = "0.3.0.dev0"
description = "Python interface to multiple optimization solvers"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Yue Yang", email = "metab0t@outlook.com" }]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    'License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)',
]

[project.urls]
Homepage = "https://github.com/metab0t/pyoptinterface"

[project.optional-dependencies]
doc = ["sphinx", "myst-parser", "myst-nb", "sphinx-copybutton", "furo", "numpy", "highsbox"]
test = ["pytest", "numpy"]
highs = ["highsbox"]
nlp = ["llvmlite", "tccbox"]

[tool.scikit-build]
editable.rebuild = true
build-dir = "build/{wheel_tag}"
cmake.build-type = "Release"
# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.scikit-build.cmake.define]
PYTHON_VERSION = { env = "PYTHON_VERSION", default = "3.8" }
CMAKE_FIND_DEBUG_MODE = "OFF"
ENABLE_TEST_MAIN = "OFF"
