[build-system]
requires = ["scikit-build-core", "nanobind", "typing_extensions"]
build-backend = "scikit_build_core.build"

[project]
name = "pyoptinterface"
version = "0.4.1"
description = "Python interface to multiple optimization solvers"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Yue Yang", email = "metab0t@outlook.com" }]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    'License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)',
]

[project.urls]
Homepage = "https://github.com/metab0t/pyoptinterface"

[project.optional-dependencies]
matrix = ["numpy", "scipy"]
highs = ["highsbox"]
nlp = ["llvmlite", "tccbox"]
test = ["pytest", "numpy", "scipy>=1.11.0", "highsbox", "llvmlite", "tccbox"]

[tool.scikit-build]
editable.rebuild = true
build-dir = "build/{wheel_tag}"
cmake.build-type = "Release"
# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.scikit-build.cmake.define]
PYTHON_VERSION = { env = "PYTHON_VERSION", default = "3.9" }
CMAKE_FIND_DEBUG_MODE = "OFF"
ENABLE_TEST_MAIN = "OFF"
